styles.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');

:root {
    --black-color: #262626;
    --blue-color: #247BA0;
    --orange-color: #e49273;
    --brown-color: #A37A74;
    --light-blue: #9AADBF;
    --light-orange: #FFF5EE;
    --white-color: #f2f4f7;
    --green-color: #249672;
}
* {
    margin: 0;
    padding: 0;
    border: none;
    outline: none;
    box-sizing: border-box;
    font-family: "Lato", sans-serif;
}
body {
    display: flex;
}
.sidebar {
    position: absolute;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    top: 0;
    left: 0;
    bottom: 0;
    width: 220px;
    height: 100vh;
    padding: 0 1rem;
    overflow: hidden;
    overflow-y: auto;
    /* overflow-x: auto; */
    transition: all 0.5s linear;
    background: var(--black-color);
}
.sidebar:hover {
    width: 235px;
    transition: 0.5s;
}
.logo {
    top: 15px;
    height: 70px;
    padding: 10px;
    font-size: 20px;
    font-weight: 700;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    gap: 40px;
}
.fa-xmark {
    cursor: pointer;
    color: var(--light-orange);
}
.fa-xmark:hover {
    color: var(--orange-color);
}
.logo a {
    background: linear-gradient(to right, var(--green-color), var(--light-blue), var(--light-orange), var(--orange-color), var(--brown-color), var(--light-blue), var(--green-color));
    background-clip: text;   
    -webkit-text-fill-color: transparent;
    text-decoration: none;
    display: flex;
    align-items: first baseline;
    justify-content: space-around;
    gap: 0.7rem;
    padding-right: 7px;
}
.logo a span {
    overflow: hidden;
    line-height: 1;
}
.logo a span:hover {
    animation-play-state: paused;
}
.logo a i {
    font-size: 20px;
}
.menu {
    height: 88%;
    padding-top: 10px;
    position: relative;
    list-style: none;
}
.menu li {
    padding: 20px;
    margin: 13px 0;
    border-radius: 8px;
    transition: all 0.3s ease-in-out;
}
.menu li:hover, 
.active {
    background: var(--orange-color);
}
.menu a {
    color: var(--white-color);
    font-size: 14px;
    text-decoration: none;
    display: flex;
    align-items: center;
    gap: 1.5rem;
}
.menu a i {
    font-size: 1.5rem;
}
.menu-icon i {
    font-size: 1.5rem;
    cursor: pointer;
}
.logout {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
}


.main-content {
    position: relative;
    background-color: #313131;
    width: 100vw;
    padding: 1.0rem;
}
.header-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    background-color: #fff;
    border-radius: 10px;
    padding: 10px 2rem;
    margin-bottom: 1rem;
    height: 70px;
}
.header-title {
    color: var(--black-color);
}
.user-info {
    display: flex;
    align-items: center;
    gap: 1rem;
}
.fa-user-alt {
    color: var(--brown-color);
}
.search-box {
    background: rgb(237, 237, 237);
    border-radius: 15px;
    color: var(--black-color);
    display: flex;
    align-items: center;
    gap: 5px;
    padding: 4px 12px;
}
.search-box input {
    background: transparent;
    padding: 6px;
}
.search-box i {
    font-size: 1.2rem;
    cursor: pointer;
    transition: all 0.5s ease-out;
}
.search-box i:hover {
    transform: scale(1.2);
}

.card-container {
    background: #ffffff;
    padding: 2rem;
    border-radius: 10px;
    margin-bottom: 1rem;
}
.product-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.product-button, 
.finance-button,
.order-button {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    gap: 1.5rem;
}
.main-title {
    color: var(--brown-color);
    padding-bottom: 10px;
    font-size: 20px;
}
.order-button button {
    background: var(--blue-color);
    color: var(--white-color);
}
.order-button button:hover {
    background:#144459;
}
.finance-button button {
    font-size: medium;
    font-weight: 600;
    background: var(--brown-color);
    cursor: pointer;
    transition: all 0.5s;
    color: var(--light-orange);
    padding: 12px 13px;
    border-radius: 5px;
}
.finance-button button:hover {
    background: #634844;
}

.add-button, .download-button {
    font-size: medium;
    font-weight: 600;
    background: var(--green-color);
    cursor: pointer;
    transition: all 0.5s;
    color: var(--white-color);
    padding: 12px 13px;
    border-radius: 5px;
}
.add-button:hover, 
.download-button:hover {
    background: #145440;
    border-radius: 19px;
}


.form-popup {
    bottom: 2;
    right: 15px;
    z-index: 9;
}
.form-container {
    display: none;
    margin-top: 5px;
    padding: 1rem;
    background-color: white;
    border: 3px solid lightgrey;
    border-radius: 3px;
}
.form-columns {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 18px;
    width: 100%;
}
.first-col, .second-col, .third-col {
    width: 48%;
}
.order-first-col, .order-second-col, .order-third-col {
    width: 32%;
}
label {
    margin-bottom: 10px;
    display: block;
}
.form-container input[type=text], 
.form-container input[type=date],
.form-container input[type=number],
.form-container select {
    width: 100%;
    padding: 15px;
    margin: 5px 0 22px 0;
    border: none;
    background: #f1f1f1;
}
.form-container input[type=text]:focus, 
.form-container input[type=date]:focus,
.form-container input[type=number]:focus {
    background-color: #ddd;
    outline: none;
}
.button-col {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 18px;
}
.form-container .btn {
    background-color: var(--green-color);
    color: white;
    padding: 16px 20px;
    border: none;
    cursor: pointer;
    width: 30%;
    margin-bottom:10px;
    opacity: 0.8;
    font-size: 15px;
}
/* ... */

